fix drawer z-index

--- a/app/webpacker/stylesheets/index.scss
+++ b/app/webpacker/stylesheets/index.scss
@@ -26,6 +26,10 @@
   z-index: 10;
 }
 
+.drawer--modal {
+  z-index: 100;
+}
+
 .toolbar {
   padding: 4px;
   align-items: center;
